Implement get a specific post and delete post api
