# services/post/routes.go
@@ -22,14 +22,68 @@ func NewHandler(store types.PostStore, userStore types.UserStore) *Handler {
 }
 
 func (h *Handler) RegisterRoutes(router *mux.Router) {
-	router.HandleFunc("/posts", h.handleGetProducts).Methods(http.MethodGet)
+	router.HandleFunc("/posts", h.handleGetPosts).Methods(http.MethodGet)
+	router.HandleFunc("/post/{id}", h.handleGetPost).Methods(http.MethodGet)
 	router.HandleFunc("/post", auth.WithJWTAuth(h.handleCreateProduct, h.userStore)).Methods(http.MethodPost)
-	router.HandleFunc("/post/{id}", auth.WithJWTAuth(h.updatePost, h.userStore)).Methods(http.MethodPatch)
+	router.HandleFunc("/post/{id}", auth.WithJWTAuth(h.handleUpdatePost, h.userStore)).Methods(http.MethodPatch)
+	router.HandleFunc("/post/{id}", auth.WithJWTAuth(h.handleDeletePost, h.userStore)).Methods(http.MethodDelete)
 }
 
-// updateProduc update a post
+// handleGetPost get a post
+// @Summary Get a post
+// @Description Get a post by id
+// @Tags Post
+// @Accept json
+// @Produce json
+// @Param id path string true "Post ID"
+// @Success 200 {object} types.BaseResponse "Success"
+// @Router /api/v1/post/{id} [get]
+func (h *Handler) handleGetPost(w http.ResponseWriter, r *http.Request) {
+	stringPostId := mux.Vars(r)["id"]
+	postId, err := strconv.Atoi(stringPostId)
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+	}
+
+	p, err := h.store.GetPostById(postId)
+	if p == nil {
+		utils.WriteError(w, http.StatusNotFound, err)
+		return
+	}
+
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+	}
+	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
+		Message:  "Get post successfully",
+		Metadata: p,
+	})
+}
+
+// handleGetProducts get all posts
+// @Summary Get all posts
+// @Description Get all post
+// @Tags Post
+// @Accept json
+// @Produce json
+// @Success 200 {object} types.BaseResponse "Success"
+// @Router /api/v1/posts [get]
+func (h *Handler) handleGetPosts(w http.ResponseWriter, r *http.Request) {
+	posts, err := h.store.GetPosts()
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+		return
+	}
+
+	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
+		Message:  "Get all posts successfully",
+		Metadata: posts,
+	})
+}
+
+// handleUpdatePost update a post
 // @Summary Update a post
-// @Description Create a new post
+// @Description Update a post
 // @Tags Post
 // @Accept json
 // @Produce json
@@ -38,7 +92,7 @@ func (h *Handler) RegisterRoutes(router *mux.Router) {
 // @Param payload body types.UpdatePostPayload  true "Post payload"
 // @Success 200 {object} types.BaseResponse "Success"
 // @Router /api/v1/post/{id} [patch]
-func (h *Handler) updatePost(w http.ResponseWriter, r *http.Request) {
+func (h *Handler) handleUpdatePost(w http.ResponseWriter, r *http.Request) {
 	authorId := auth.GetUserIdFromContext(r.Context())
 	stringPostId := mux.Vars(r)["id"]
 	var payload types.UpdatePostPayload
@@ -65,6 +119,36 @@ func (h *Handler) updatePost(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
 		Message:  "Update post successfully",
 		Metadata: payload,
+	})
+}
+
+// handleDeletePost delete a post
+// @Summary Delete a post
+// @Description Delete a post
+// @Tags Post
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "JWT Token"
+// @Param id path string true "Post ID"
+// @Success 200 {object} types.BaseResponse "Success"
+// @Router /api/v1/post/{id} [delete]
+func (h *Handler) handleDeletePost(w http.ResponseWriter, r *http.Request) {
+	authorId := auth.GetUserIdFromContext(r.Context())
+	stringPostId := mux.Vars(r)["id"]
+	postId, err := strconv.Atoi(stringPostId)
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+	}
+
+	err = h.store.DeletePostById(postId, authorId)
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+		return
+	}
+
+	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
+		Message:  "Delete post successfully",
+		Metadata: nil,
 	})
 }
 
@@ -100,26 +184,5 @@ func (h *Handler) handleCreateProduct(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
 		Message:  "Create a post successfully",
 		Metadata: payload,
-	})
-}
-
-// handleGetProducts get all posts
-// @Summary Get all posts
-// @Description Create a new post
-// @Tags Post
-// @Accept json
-// @Produce json
-// @Success 200 {object} types.BaseResponse "Success"
-// @Router /api/v1/posts [get]
-func (h *Handler) handleGetProducts(w http.ResponseWriter, r *http.Request) {
-	products, err := h.store.GetPosts()
-	if err != nil {
-		utils.WriteError(w, http.StatusInternalServerError, err)
-		return
-	}
-
-	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
-		Message:  "Get all posts successfully",
-		Metadata: products,
 	})
 }
